--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#3F51B5"
-        android:endColor="#9C27B0"
-        android:startColor="#2196F3"
+        android:centerColor="@color/purple_700"
+        android:endColor="@color/purple_700"
+        android:startColor="@color/purple_500"
         android:type="linear" />
 </shape>
