--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,21 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg"
     tools:context=".ui.gallery.ScheduleFragment">
 
-    <CalendarView
+    <com.kizitonwose.calendarview.CalendarView
         android:id="@+id/cvSchedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="338dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
+        app:cv_dayViewResource="@layout/calendar_day_layout"
+        app:cv_monthHeaderResource="@layout/calendar_month_header"
+        app:cv_scrollMode="paged"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivNoSchedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/schedule_no_schedule"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="@+id/rvScheduleList"
+        app:layout_constraintStart_toStartOf="@+id/rvScheduleList"
+        app:layout_constraintTop_toTopOf="@+id/rvScheduleList" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvScheduleList"
@@ -48,7 +62,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
-        android:id="@+id/btnAddSchedule"
+        android:id="@+id/btnScheduleAddNew"
         android:layout_width="78dp"
         android:layout_height="78dp"
         android:background="#00FFFFFF"
@@ -59,16 +73,5 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-    <ImageView
-        android:id="@+id/ivNoSchedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/schedule_no_schedule"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/rvScheduleList"
-        app:layout_constraintEnd_toEndOf="@+id/rvScheduleList"
-        app:layout_constraintStart_toStartOf="@+id/rvScheduleList"
-        app:layout_constraintTop_toTopOf="@+id/rvScheduleList" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
